--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<!--this is title-->
+		<title> A to Z </title>
+	</head>
+	<body>
+		<!-- anchor tag -->
+		<a href="https://www.w3schools.com/" target="-blank"> Click here </a>
+	<!-- heading tag -->
+	<h1> We are the best </h1>
+	<h2> We are the best </h2>
+	<h3> We are the best </h3>
+	<h4> We are the best </h4>
+	<h5> We are the best </h5>
+	<h6> We are the best </h6>
+	<!-- image tag -->
+	<img src="F:/sundorbons/FB_IMG_1603113233701.jpg" alt="robiul awal">
+	<img src="inside/image-fol/sawon.jpg" alt="sawon img">
+	<img src="inside/worldwide/img2020.jpg" alt="tiger image">
+	<img src="F:/sundorbons/IMG_20201019_171441.jpg" alt="royal pic"
+		
+		<!-- video -->
+	<video src="inside/video/Ek Ladki Ko Dekha (Acoustic) - Sanam.mp4" width="1920" heigh="1080" controls></video>
+	<video src="D:\video-songs/Vaaste Song- Dhvani Bhanushali, Tanishk Bagchi - Nikhil D - Bhushan Kumar - Radhika Rao, Vinay Sapru.mp4"width="1920" heigh="960" controls></video>
+	
+	<!-- list tag -->
+	<ul>
+	<li> SARDAR </li>
+	<li> SALEHA  </li>
+	<li> AYUB </li>
+    </ul>
+    <ol>
+    <li> ROBIUL </li>
+    <li> AKRAM  </li>
+    <li> KHAN   </li>  
+    </ol>
+    <!-- paragraph tag -->
+    <p> I am SARDAR ROBIUL AWAL.<br> I am a web developer.<br> I am new in side.<bd> I want to be a good d
+    	eveloper.
+    </p> 
+    <!-- marquee tag -->
+    <marquee> I want to be a king of the web developer side </marquee>
+    <!-- hr tag -->
+    <hr>
+    <!-- button tag -->
+    <button>
+    	<a href="https://www.youtube.com/watch?v=GXz2ct_qMjQ&list=PLRRmxaFCrLnUiFKHhK_SIw02-SXHiJYXr">click me   </a>
+    </button>
+    <!-- Article taag -->
+    <article>
+    	<h1> HONOURS FAMILY </h1>
+    	<p> Since 2009 </p>
+    </article>
 
+    <!-- blockquite tag -->
+    <blockquite>
+    	English is an inter national language. No nation can do without it today. A telephone operator, a Pilot guide must know English. 
+    </blockquite>
+
+     <!-- legend tag -->
+     <h1>The legend element</h1>
+     <form action="/action_page.php">
+    	<fieldset>
+    		<legend>Personalia:</legend>
+    		<label for="fname">First name:</label>
+    		<input type="text" id="fname" name="fname"><br><br>
+    		<label for="lname">Last name:</label>
+    		<input type="text" id="lname" name="lname"><br><br>
+    		<label for="email">Eamil:</label>
+    		<input type="email" id="email" name="email"><br><br>
+    		<label for="birthday">Birthday:</label>
+    		<input type="date" id="Birthday" name="birthday"><br><br>
+    		<input type="submit" value="Submit">
+    	</fieldset>
+    </form>
+
+
+     </bd>
+     </html>
